--- a/aux_q2.ipynb
+++ b/aux_q2.ipynb
@@ -59,28 +59,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_q2 = rows(matrix_q2); \n",
-    "b_q2 = matrix_q2 * ones(n,1);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Eliminação de Gauss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_gauss = matrix_q2\\b;"
+    "b_q2 = matrix_q2 * ones(n_q2, 1);"
    ]
   },
   {
@@ -111,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 134,
    "metadata": {
     "scrolled": true
    },
@@ -120,14 +104,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tamanho da matriz 183.00000\n",
+      "Tamanho da matriz 183\n",
       "Norma euclediana da matriz 1151883927.14545\n",
       "Numéro de condição 32650766045989.01953\n"
      ]
     }
    ],
    "source": [
-    "printf(\"Tamanho da matriz %.5f\\n\", n_q2)\n",
+    "printf(\"Tamanho da matriz %d\\n\", n_q2)\n",
     "printf(\"Norma euclediana da matriz %.5f\\n\", norm_q2)\n",
     "printf(\"Numéro de condição %.5f\\n\", cond_q2)"
    ]
@@ -138,7 +122,7 @@
    "source": [
     "### b) Obtenha os fatores da decomposição LU, usando a função `[L,U,P,Q] = lu(A)`, e observe a configuração de esparsidade das matrizes `A`, `L` e `U`, usando o comando spy(A). Calcule a taxa de preenchimento: \n",
     "\n",
-    "### `100 − (nnz(A) / nnz(L) + nnz(U)) ∗ 100`\n",
+    "### `100 − (nnz(A) / (nnz(L) + nnz(U))) ∗ 100`\n",
     "\n",
     "### Coloque tambem a configuração da matriz no seu relatorio."
    ]
@@ -163,19 +147,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Taxa de preenchimento = 46.25440"
+      "Taxa de preenchimento = 46.25440%\n",
+      "A matriz A apresenta 183 linhas/colunas, 33489 posições e 1069 valores nulos. 3.19 % dos valores são nulos.\n",
+      "A matriz L apresenta 183 linhas/colunas, 33489 posições e 912 valores nulos. 2.72 % dos valores são nulos.\n",
+      "A matriz U apresenta 183 linhas/colunas, 33489 posições e 1077 valores nulos. 3.22 % dos valores são nulos.\n"
      ]
     }
    ],
    "source": [
-    "printf(\"Taxa de preenchimento = %.5f\", tx_preenchimento_q2);"
+    "printf(\"Taxa de preenchimento = %.5f%%\\n\", tx_preenchimento_q2);\n",
+    "printf(\"A matriz A apresenta %d linhas/colunas, %d posições e %d valores nulos. %.2f %% dos valores são nulos.\\n\", rows(matrix_q2),rows(matrix_q2)^2, nnz(matrix_q2), nnz(matrix_q2)/rows(matrix_q2)^2*100)\n",
+    "printf(\"A matriz L apresenta %d linhas/colunas, %d posições e %d valores nulos. %.2f %% dos valores são nulos.\\n\", rows(L_q2),rows(L_q2)^2, nnz(L_q2), nnz(L_q2)/rows(L_q2)^2*100)\n",
+    "printf(\"A matriz U apresenta %d linhas/colunas, %d posições e %d valores nulos. %.2f %% dos valores são nulos.\\n\", rows(U_q2),rows(U_q2)^2, nnz(U_q2), nnz(U_q2)/rows(U_q2)^2*100)"
    ]
   },
   {
@@ -241,7 +231,9 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -270,7 +262,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Método Iterativo de Gauss-Seidel"
+    "### d)Calcule a norma do erro, \n",
+    "\n",
+    "### `||erro||_∞ = norm(ones(n, 1) − x, inf)`\n",
+    "\n",
+    "### e a norma do resíduo,\n",
+    "\n",
+    "### `||res||_∞ = norm(b − A ∗ x, inf)` \n",
+    "\n",
+    "### para a solução obtida pelo método de Eliminação de Gauss."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Eliminação de Gauss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_gauss_q2 = matrix_q2\\b;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "erro_q2 = norm(ones(n_q2, 1) - x_gauss_q2, inf);\n",
+    "res_q2 = norm(b_q2 - matrix_q2 * x_gauss_q2, inf);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O erro normalizado é igual a 4.66768e-05.\n",
+      "O resíduo normalizado é igual a 2.98023e-08.\n"
+     ]
+    }
+   ],
+   "source": [
+    "printf(\"O erro normalizado é igual a %0.5e.\\n\", erro_q2)\n",
+    "printf(\"O resíduo normalizado é igual a %0.5e.\\n\", res_q2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Método Iterativo de Gauss-Seidel"
    ]
   },
   {
